# why_is_docker_the_best

./: .dockerignore  .gitignore  Cargo.toml  README.md  fly.toml
.github/workflows/: docker-publish.yml  security-scan.yml
docker/: Caddyfile  Dockerfile  docker-compose.yml
src/: handlers.rs  lib.rs  macros.rs  main.rs  templates.rs  web_server.rs
templates/: package.json  pnpm-lock.yaml
templates/layouts/: base.html
templates/pages/: index.html  server_error.html
templates/styles/: styles.css  tailwind.css
