[package]
name = "why_is_docker_the_best"
version = "0.1.1"
edition = "2024"

[dependencies]
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.7", features = ["ws", "multipart"] }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
listenfd = "1.0.2"

askama = "0.15"